--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -21,5 +21,9 @@ Type <span class="highlight">help</span> to see available commands.
       </div>
   </div>
     <script src="{{ url_for('static', filename='js/terminal.js') }}"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
