Fixed a problem noticed by DevTools

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KalOS Terminal</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-     <!-- Open Graph -->
-      <meta property="og:title" content="Kalfolio Terminal" />
-      <meta property="og:description" content="A Linux Based Portfolio for Kalmai221" />
-      <meta property="og:image" content="https://kalfolio.vercel.app/social-preview.png" />
-      <meta property="og:url" content="https://kalfolio.vercel.app" />
-      <meta property="og:type" content="website" />
-
-      <!-- Twitter Card -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:title" content="Kalfolio Terminal" />
-      <meta name="twitter:description" content="A Linux Based Portfolio for Kalmai221" />
-      <meta name="twitter:image" content="https://kalfolio.vercel.app/social-preview.png" />
+    <meta name="description" content="A Linux Based Portfolio for Kalmai221" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Kalfolio Terminal" />
+    <meta property="og:description" content="A Linux Based Portfolio for Kalmai221" />
+    <meta property="og:image" content="https://kalfolio.vercel.app/social-preview.png" />
+    <meta property="og:url" content="https://kalfolio.vercel.app" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kalfolio Terminal" />
+    <meta name="twitter:description" content="A Linux Based Portfolio for Kalmai221" />
+    <meta name="twitter:image" content="https://kalfolio.vercel.app/social-preview.png" />
 </head>
 <body>
     <div id="boot-sequence" style="display: block;">
